--- a/source/_drafts/H项目心路历程记-3.md
+++ b/source/_drafts/H项目心路历程记-3.md
@@ -1,4 +1,32 @@
 ---
-title: H项目心路历程记-3
+title: H项目心路历程记(三)
 tags:
+  - 架构
+  - Kubernetes
+  - Aliyun
+  - Java
+categories:
+  - 设计
 ---
+
+对于一个基于微服务的中台系统来说，需要以什么样的颗粒度来拆分系统。这一直是基于微服务架构的系统中绕不过去的问题。
+
+已H项目来说，当初考量是这么划分微服务的,其中
+
+- `基础服务`: 作用主要是负责用户，角色权限，登陆鉴权，以及一些基础主档数据的日常维护功能 
+- `商品服务`: 物料，销售商品，款式，平台商品等和实际商品相关的主档数据
+- `库存服务`：负责管理各个库存层级库存(总库存，冻结库存，在途库存等)，以及展示各种出入库单据，并向其他微服务提供出入库服务接口。
+- `订单服务`: 负责接收各个公域平台的ToC订单，售后单(含发货前退款，退货，换货单等)，并根据配置策略进行单据路由(分仓，分物流，Hold单，加送赠品，通知仓库发货，通知平台发货等)
+- `接口服务`: 主要承揽中台服务和第三方平台间的交互处理(主要是第三方平台发起的主调通知以及回调)
+
+上述五个服务为核心服务，是保证整个中台系统基础业务功能运行的重要组成部分。除此之外还有，
+
+- `采购服务`：负责ToB业务线的处理
+- `财务服务`：满足一些企业的财务对账以及开具电子发票的功能
+- `报表服务`: 每天，每周定期从其他服务(主要是订单)
+- `会员服务`：管理各类会员
+
+等7，8个非核心服务，组成非核心业务。来构成一个完整的中台系统。
+
+所以整个系统满血运行起来要至少要十几个服务，外加一些没有云平台的中间件。整个Kubernetes环境中，至少要有十五六个Deployment。
+
